Ajustes al texto

--- a/Principios y estandares.html
+++ b/Principios y estandares.html
@@ -90,48 +90,49 @@
 <br> CONFIDENCIALIDAD<br>
 
 <br>Se refiere a la privacidad de la información almacenada y procesada en un sistema informático. Aquí se busca proteger al sistema de información de invasiones, intrusiones y accesos no deseados, por parte de personas o programas no autorizados. Este principio se presenta mucho en sistemas distribuidos, es decir, aquellos en los que usuarios y datos se encuentran  en diferentes lugares. <br>
-<br>Un ejemplo de confidencialidad es la Criptografía, cuyo objetivo es  encriptar los datos para que no sean comprensibles por personas sin autorización.<br>
+Un ejemplo de confidencialidad es la Criptografía, cuyo objetivo es  encriptar los datos para que no sean comprensibles por personas sin autorización.<br>
 
 
 <br> INTEGRIDAD<br>
 
 <br>Garantizar la integridad es uno de los principales objetivos para la seguridad de la información de un individuo o empresa. Permitiendo garantizar que la información no sea  alterada de forma indebida y asegurando que los procesos de actualización estén sincronizados y no se dupliquen. Este principio es importante para los diferentes usuarios, ordenadores y procesos que comparten la misma información. <br>
-<br>Para garantizar la integridad, es necesario que todos los elementos que componen la base de gestión de la información se mantengan en sus condiciones originales definidas por sus responsables y propietarios.<br>
+Para garantizar la integridad, es necesario que todos los elementos que componen la base de gestión de la información se mantengan en sus condiciones originales definidas por sus responsables y propietarios.<br>
 
 <br>DISPONIBILIDAD<br>
 
 <br>Es el tercer principio y permite que la información esté al alcance de los  usuarios y destinatarios en cualquier momento para su uso, accediendo en forma segura a través de un usuario y contraseña garantizando la integridad y confidencialidad de su información.<br>
 <p>
 	</p>
-			<p>
-                        <dt><b>ESTÁNDARES Y NORMAS  A NIVEL MUNDIAL QUE APOYA LA GESTIÓN DE LA SEGURIDAD INFORMÁTICA</b></dt>
-                   </p>
-<p>				
-<br>ISO 17799<br>
-<br>Es un estándar para la administración de la seguridad de la información e implica la implementación de toda una estructura documental ofreciendo recomendaciones para realizar la gestión de la seguridad de la información dirigidas a los responsables de iniciar, implantar o mantener la seguridad de una organización. Este estándar fue publicado por (ISO) en diciembre de 2000 con el objeto de desarrollar un marco de seguridad sobre el cual trabajen las organizaciones. 
-
-<br>ISO Serie 27000
-
-<br> ISO/IEC 27000 esta reservado para una gama de normas de gestión de la seguridad de la información <br>
-
-La numeración actual de las Normas de la serie ISO/IEC 27000 es la siguiente:
-•	ISO/IEC 27000: Fundamentos y vocabulario.
-•	ISO/IEC 27001: Norma que especifica los requisitos para la implantación del Sistema de Gestión de Seguridad de la Información (SGSI). Es la norma más importante de la familia.
-•	Adopta un enfoque de gestión de riesgos y promueve la mejora continua de los procesos.
-•	ISO/IEC 27002: (previamente BS 7799 Parte 1 y la norma ISO/IEC 17799): Código de buenas prácticas para la gestión de Seguridad de la Información.
-•	ISO/IEC 27003: Directrices para la implementación de un Sistema de Gestión de Seguridad de la Información (SGSI). Es el soporte de la norma ISO/IEC 27001.
-•	ISO/IEC 27004: Métricas para la gestión de Seguridad de la Información. Es la que proporciona recomendaciones de quién, cuándo y cómo realizar mediciones de seguridad de la información.
-•	ISO/IEC 27005: Gestión de riesgos de la Seguridad de la Información.
-Es la que proporciona recomendaciones y lineamientos de métodos y técnicas de evaluación de riesgos de Seguridad en la Información, en soporte del proceso de gestión de riesgos de la norma ISO/IEC 27001.
-•	ISO/IEC 27006: Requisitos para la acreditación de las organizaciones que proporcionan la certificación de los sistemas de gestión de la Seguridad de la Información. Esta norma específica requisitos específicos para la certificación de SGSI y es usada en conjunto con la norma 17021-1, la norma genérica de acreditación.
-
-                    </p>
-			<br>
 			<br>
 			
 			 <figure>
                         <img src="img/imagen 2.jpg" alt="Seguridad">
                   	</figure>
+			<p>
+                        <dt><b>ESTÁNDARES Y NORMAS  A NIVEL MUNDIAL QUE APOYA LA GESTIÓN DE LA SEGURIDAD INFORMÁTICA</b></dt>
+                   </p>
+<p>				
+<br>ISO 17799<br>
+<br>Es un estándar para la administración de la seguridad de la información e implica la implementación de toda una estructura documental ofreciendo recomendaciones para realizar la gestión de la seguridad de la información dirigidas a los responsables de iniciar, implantar o mantener la seguridad de una organización.<br> 
+Este estándar fue publicado por (ISO) en diciembre de 2000 con el objeto de desarrollar un marco de seguridad sobre el cual trabajen las organizaciones. <br>
+
+<br>ISO Serie 27000<br>
+
+<br> ISO/IEC 27000 esta reservado para una gama de normas de gestión de la seguridad de la información <br>
+
+<br>La numeración actual de las Normas de la serie ISO/IEC 27000 es la siguiente:<br>
+•	ISO/IEC 27000: Fundamentos y vocabulario.<br>
+•	ISO/IEC 27001: Norma que especifica los requisitos para la implantación del Sistema de Gestión de Seguridad de la Información (SGSI). Es la norma más importante de la familia.<br>
+•	Adopta un enfoque de gestión de riesgos y promueve la mejora continua de los procesos.<br>
+•	ISO/IEC 27002: (previamente BS 7799 Parte 1 y la norma ISO/IEC 17799): Código de buenas prácticas para la gestión de Seguridad de la Información.<br>
+•	ISO/IEC 27003: Directrices para la implementación de un Sistema de Gestión de Seguridad de la Información (SGSI). Es el soporte de la norma ISO/IEC 27001.<br>
+•	ISO/IEC 27004: Métricas para la gestión de Seguridad de la Información. Es la que proporciona recomendaciones de quién, cuándo y cómo realizar mediciones de seguridad de la información.<br>
+•	ISO/IEC 27005: Gestión de riesgos de la Seguridad de la Información.<br>
+Es la que proporciona recomendaciones y lineamientos de métodos y técnicas de evaluación de riesgos de Seguridad en la Información, en soporte del proceso de gestión de riesgos de la norma ISO/IEC 27001.<br>
+•	ISO/IEC 27006: Requisitos para la acreditación de las organizaciones que proporcionan la certificación de los sistemas de gestión de la Seguridad de la Información. Esta norma específica requisitos específicos para la certificación de SGSI y es usada en conjunto con la norma 17021-1, la norma genérica de acreditación.<br>
+
+                    </p>
+			
       			</article>
     </section>
     <aside> 
