--- a/Principios y estandares.html
+++ b/Principios y estandares.html
@@ -103,7 +103,6 @@ Para garantizar la integridad, es necesario que todos los elementos que componen
 <br>Es el tercer principio y permite que la información esté al alcance de los  usuarios y destinatarios en cualquier momento para su uso, accediendo en forma segura a través de un usuario y contraseña garantizando la integridad y confidencialidad de su información.<br>
 <p>
 	</p>
-			<br>
 			
 			 <figure>
                         <img src="img/imagen 2.jpg" alt="Seguridad">
@@ -119,17 +118,13 @@ Este estándar fue publicado por (ISO) en diciembre de 2000 con el objeto de des
 <br>ISO Serie 27000<br>
 
 <br> ISO/IEC 27000 esta reservado para una gama de normas de gestión de la seguridad de la información <br>
-
-<br>La numeración actual de las Normas de la serie ISO/IEC 27000 es la siguiente:<br>
 •	ISO/IEC 27000: Fundamentos y vocabulario.<br>
-•	ISO/IEC 27001: Norma que especifica los requisitos para la implantación del Sistema de Gestión de Seguridad de la Información (SGSI). Es la norma más importante de la familia.<br>
-•	Adopta un enfoque de gestión de riesgos y promueve la mejora continua de los procesos.<br>
-•	ISO/IEC 27002: (previamente BS 7799 Parte 1 y la norma ISO/IEC 17799): Código de buenas prácticas para la gestión de Seguridad de la Información.<br>
-•	ISO/IEC 27003: Directrices para la implementación de un Sistema de Gestión de Seguridad de la Información (SGSI). Es el soporte de la norma ISO/IEC 27001.<br>
-•	ISO/IEC 27004: Métricas para la gestión de Seguridad de la Información. Es la que proporciona recomendaciones de quién, cuándo y cómo realizar mediciones de seguridad de la información.<br>
+•	ISO/IEC 27001: Norma que especifica los requisitos para la implantación del sistema de seguridad de la información.
+•	ISO/IEC 27002: Código de buenas prácticas.<br>
+•	ISO/IEC 27003: Es el soporte de la norma ISO/IEC 27001.<br>
+•	ISO/IEC 27004: Es la que proporciona recomendaciones de quién, cuándo y cómo realizar mediciones de seguridad de la información.<br>
 •	ISO/IEC 27005: Gestión de riesgos de la Seguridad de la Información.<br>
-Es la que proporciona recomendaciones y lineamientos de métodos y técnicas de evaluación de riesgos de Seguridad en la Información, en soporte del proceso de gestión de riesgos de la norma ISO/IEC 27001.<br>
-•	ISO/IEC 27006: Requisitos para la acreditación de las organizaciones que proporcionan la certificación de los sistemas de gestión de la Seguridad de la Información. Esta norma específica requisitos específicos para la certificación de SGSI y es usada en conjunto con la norma 17021-1, la norma genérica de acreditación.<br>
+•	ISO/IEC 27006: Requisitos para la acreditación de las organizaciones que proporcionan la certificación de los sistemas de gestión de la Seguridad de la Información. <br>
 
                     </p>
 			
