--- a/Estandares.html
+++ b/Estandares.html
@@ -19,8 +19,8 @@
                   <div id="apDiv24">OVA Para Curso Segurida Informatica  - Tecnología en Desarrollo de Software</div>
               </div>
             </header>
-            <p>&nbsp;</p>
-   	    <p>&nbsp;</p>
+        	<p>&nbsp;</p>
+   			<p>&nbsp;</p>
             <p>&nbsp;</p>
     		<nav>
                <ul class="menu">
@@ -78,23 +78,56 @@
              </nav>
             <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a>									</div>
     <section>
-    <h2>LECTURAS</h2>
+	    
     <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
-                    <figure>
-                        <img src="img/Seguridad.jpg" alt="Seguridad">
-                  	</figure>
+                   
                     <p>
-                        <dt><b>INTRODUCCION</b></dt>
+                        <dt><b>PRINCIPIOS DE SEGURIDAD INFORMATICA</b></dt>
                    </p>
 			
 			<p>
-<br> La seguridad informática es la encargada de diseñar las normas, procedimientos y técnicas, para asegurar la integridad, disponibilidad y privacidad de la información en un sistema informático e intentar reducir las amenazas que se pueden encontrar. 
-Encontramos dos tipos de seguridad: La seguridad lógica que se enfoca en la protección de los contenidos y su información y la seguridad física aplicada a los equipos. <br>
-<br> En la actualidad la seguridad de la información es de suma importancia para las empresas y para las personas  ya que con los avances tecnológicos han permitido el crecimiento de las vulnerabilidades de virus, hackers entre otros y con la implementación 
-de un sistema de seguridad permitirá minimizar las vulnerabilidades de los sistemas y de la información contenida en ellos, así como de las redes privadas y sus recursos. <br>
+<br> CONFIDENCIALIDAD<br>
+
+<br>Se refiere a la privacidad de la información almacenada y procesada en un sistema informático. Aquí se busca proteger al sistema de información de invasiones, intrusiones y accesos no deseados, por parte de personas o programas no autorizados. Este principio se presenta mucho en sistemas distribuidos, es decir, aquellos en los que usuarios y datos se encuentran  en diferentes lugares. <br>
+Un ejemplo de confidencialidad es la Criptografía, cuyo objetivo es  encriptar los datos para que no sean comprensibles por personas sin autorización.<br>
+
+
+<br> INTEGRIDAD<br>
+
+<br>Garantizar la integridad es uno de los principales objetivos para la seguridad de la información de un individuo o empresa. Permitiendo garantizar que la información no sea  alterada de forma indebida y asegurando que los procesos de actualización estén sincronizados y no se dupliquen. Este principio es importante para los diferentes usuarios, ordenadores y procesos que comparten la misma información. <br>
+Para garantizar la integridad, es necesario que todos los elementos que componen la base de gestión de la información se mantengan en sus condiciones originales definidas por sus responsables y propietarios.<br>
+
+<br>DISPONIBILIDAD<br>
+
+<br>Es el tercer principio y permite que la información esté al alcance de los  usuarios y destinatarios en cualquier momento para su uso, accediendo en forma segura a través de un usuario y contraseña garantizando la integridad y confidencialidad de su información.<br>
+<p>
+	</p>
+			
+			 <figure>
+                        <img src="img/imagen 2.jpg" alt="Seguridad">
+                  	</figure>
+			<p>
+                        <dt><b>ESTÁNDARES Y NORMAS  A NIVEL MUNDIAL QUE APOYA LA GESTIÓN DE LA SEGURIDAD INFORMÁTICA</b></dt>
+                   </p>
+<p>				
+<br>ISO 17799<br>
+<br>Es un estándar para la administración de la seguridad de la información e implica la implementación de toda una estructura documental ofreciendo recomendaciones para realizar la gestión de la seguridad de la información dirigidas a los responsables de iniciar, implantar o mantener la seguridad de una organización.<br> 
+Este estándar fue publicado por (ISO) en diciembre de 2000 con el objeto de desarrollar un marco de seguridad sobre el cual trabajen las organizaciones. <br>
+
+<br>ISO Serie 27000<br>
+
+<br> ISO/IEC 27000 esta reservado para una gama de normas de gestión de la seguridad de la información <br>
+•	ISO/IEC 27000: Fundamentos y vocabulario.<br>
+•	ISO/IEC 27001: Norma que especifica los requisitos para la implantación del sistema de seguridad de la información.
+•	ISO/IEC 27002: Código de buenas prácticas.<br>
+•	ISO/IEC 27003: Es el soporte de la norma ISO/IEC 27001.<br>
+•	ISO/IEC 27004: Es la que proporciona recomendaciones de quién, cuándo y cómo realizar mediciones de seguridad de la información.<br>
+•	ISO/IEC 27005: Gestión de riesgos de la Seguridad de la Información.<br>
+•	ISO/IEC 27006: Requisitos para la acreditación de las organizaciones que proporcionan la certificación de los sistemas de gestión de la Seguridad de la Información. <br>
 
                     </p>
+			
       			</article>
     </section>
     <aside> 
