--- a/Estandares.html
+++ b/Estandares.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+d<!DOCTYPE html>
 <html lang="es" class"no-js">
     <!-- comentario  -->
     <head>
@@ -28,7 +28,7 @@
                 <li><a href="lecturas.html" class="menu">Lecturas</a>
                 <ul>
                     <li><a href="Principios y estandares.html" class="menu">Principios y estandares</a></li>
-                    <li><a href="lectura 2.html" class="menu">Lectura 2</a></li>
+                    <li><a href="Estandares.html" class="menu">Estandares</a></li>
                     <li><a href="lectura 3.html" class="menu">Lectura 3</a></li>
                 </ul>
                 </li>
