--- a/Estandares.html
+++ b/Estandares.html
@@ -105,7 +105,7 @@ Para garantizar la integridad, es necesario que todos los elementos que componen
 	</p>
 			
 			 <figure>
-                        <img src="img/imagen 2.jpg" alt="Seguridad">
+                        <img src="img/imagen 2.jpg" alt="Seguridad" style="float:rigth">
                   	</figure>
 			<p>
                         <dt><b>ESTÁNDARES Y NORMAS  A NIVEL MUNDIAL QUE APOYA LA GESTIÓN DE LA SEGURIDAD INFORMÁTICA</b></dt>
