--- a/Principios y estandares.html
+++ b/Principios y estandares.html
@@ -28,7 +28,7 @@ n<!DOCTYPE html>
                 <li><a href="lecturas.html" class="menu">Lecturas</a>
                 <ul>
                     <li><a href="Principios y estandares.html" class="menu">Principios y estandares</a></li>
-                    <li><a href="Estandares.html" class="menu">Estandares</a></li>
+                    <li><a href="Normas.html" class="menu">Normass</a></li>
                     <li><a href="lectura 3.html" class="menu">Lectura 3</a></li>
                 </ul>
                 </li>
@@ -108,7 +108,7 @@ Para garantizar la integridad, es necesario que todos los elementos que componen
                         <img src="img/imagen 2.jpg" alt="Seguridad">
                   	</figure>
 			<p>
-                        <dt><b>ESTÁNDARES Y NORMAS  A NIVEL MUNDIAL QUE APOYA LA GESTIÓN DE LA SEGURIDAD INFORMÁTICA</b></dt>
+                        <dt><b>ESTÁNDARES QUE APOYA LA GESTIÓN DE LA SEGURIDAD INFORMÁTICA</b></dt>
                    </p>
 <p>				
 <br>ISO 17799<br>
