--- a/Normas de seguridad.html
+++ b/Normas de seguridad.html
@@ -28,7 +28,7 @@ d<!DOCTYPE html>
                 <li><a href="lecturas.html" class="menu">Lecturas</a>
                 <ul>
                     <li><a href="Principios y estandares.html" class="menu">Principios y estandares</a></li>
-                    <li><a href="Estandares.html" class="menu">Estandares</a></li>
+                    <li><a href="Normas.html" class="menu">Normas</a></li>
                     <li><a href="lectura 3.html" class="menu">Lectura 3</a></li>
                 </ul>
                 </li>
@@ -83,51 +83,22 @@ d<!DOCTYPE html>
                 <article>
                    
                     <p>
-                        <dt><b>PRINCIPIOS DE SEGURIDAD INFORMATICA</b></dt>
+                        <dt><b>NORMAS DE SEGURIDAD INFORMATICA</b></dt>
                    </p>
 			
 			<p>
-<br> CONFIDENCIALIDAD<br>
-
-<br>Se refiere a la privacidad de la información almacenada y procesada en un sistema informático. Aquí se busca proteger al sistema de información de invasiones, intrusiones y accesos no deseados, por parte de personas o programas no autorizados. Este principio se presenta mucho en sistemas distribuidos, es decir, aquellos en los que usuarios y datos se encuentran  en diferentes lugares. <br>
-Un ejemplo de confidencialidad es la Criptografía, cuyo objetivo es  encriptar los datos para que no sean comprensibles por personas sin autorización.<br>
-
-
-<br> INTEGRIDAD<br>
-
-<br>Garantizar la integridad es uno de los principales objetivos para la seguridad de la información de un individuo o empresa. Permitiendo garantizar que la información no sea  alterada de forma indebida y asegurando que los procesos de actualización estén sincronizados y no se dupliquen. Este principio es importante para los diferentes usuarios, ordenadores y procesos que comparten la misma información. <br>
-Para garantizar la integridad, es necesario que todos los elementos que componen la base de gestión de la información se mantengan en sus condiciones originales definidas por sus responsables y propietarios.<br>
-
-<br>DISPONIBILIDAD<br>
-
-<br>Es el tercer principio y permite que la información esté al alcance de los  usuarios y destinatarios en cualquier momento para su uso, accediendo en forma segura a través de un usuario y contraseña garantizando la integridad y confidencialidad de su información.<br>
-<p>
-	</p>
-			
-			 <figure>
-                        <img src="img/imagen 2.jpg" alt="Seguridad" style="float:left">
-                  	</figure>
-			<p>
-                        <dt><b>ESTÁNDARES Y NORMAS  A NIVEL MUNDIAL QUE APOYA LA GESTIÓN DE LA SEGURIDAD INFORMÁTICA</b></dt>
-                   </p>
-<p>				
-<br>ISO 17799<br>
-<br>Es un estándar para la administración de la seguridad de la información e implica la implementación de toda una estructura documental ofreciendo recomendaciones para realizar la gestión de la seguridad de la información dirigidas a los responsables de iniciar, implantar o mantener la seguridad de una organización.<br> 
-Este estándar fue publicado por (ISO) en diciembre de 2000 con el objeto de desarrollar un marco de seguridad sobre el cual trabajen las organizaciones. <br>
-
-<br>ISO Serie 27000<br>
-
-<br> ISO/IEC 27000 esta reservado para una gama de normas de gestión de la seguridad de la información <br>
-•	ISO/IEC 27000: Fundamentos y vocabulario.<br>
-•	ISO/IEC 27001: Norma que especifica los requisitos para la implantación del sistema de seguridad de la información.
-•	ISO/IEC 27002: Código de buenas prácticas.<br>
-•	ISO/IEC 27003: Es el soporte de la norma ISO/IEC 27001.<br>
-•	ISO/IEC 27004: Es la que proporciona recomendaciones de quién, cuándo y cómo realizar mediciones de seguridad de la información.<br>
-•	ISO/IEC 27005: Gestión de riesgos de la Seguridad de la Información.<br>
-•	ISO/IEC 27006: Requisitos para la acreditación de las organizaciones que proporcionan la certificación de los sistemas de gestión de la Seguridad de la Información. <br>
+<br> 
+•	No abra nunca mensajes electrónicos de origen desconocido, ni los archivos adjuntos.<br> 
+•	No acceda a sitios web de dudosa reputación y realice las descargas de aplicaciones de sitios web oficiales.<br> 
+•	No facilite nunca sus datos personales, ni ningún tipo de códigos de acceso.<br> 
+•	No deben utilizarse contraseñas cortas o fáciles de deducir. No utilice las mismas contraseñas en Sistemas de Alta Seguridad (Bancos, Universidad, etc) que en Sistemas menos seguros.<br> 
+•	Debe tener el software antivirus instalado en su equipo<br> 
+•	Mantenga actualizado con los diferentes parches o actualizaciones de seguridad tanto el sistema operativo de su equipo como su navegador de Internet. Haga copias de seguridad con frecuencia para evitar la pérdida de datos importantes.<br> 
 
                     </p>
-			
+			<figure>
+                        <img src="img/imagen 2.jpg" alt="Seguridad" stile=float:left>
+                  	</figure>
       			</article>
     </section>
     <aside> 
