--- a/lecturas.html
+++ b/lecturas.html
@@ -28,7 +28,7 @@
                 <li><a href="lecturas.html" class="menu">Lecturas</a>
                 <ul>
                     <li><a href="Principios y estandares.html" class="menu">Principios y estandares</a></li>
-                    <li><a href="lectura 2.html" class="menu">Lectura 2</a></li>
+                    <li><a href="Normas.html" class="menu">Normas</a></li>
                     <li><a href="lectura 3.html" class="menu">Lectura 3</a></li>
                 </ul>
                 </li>
