Ingreso de informacion

--- a/lecturas.html
+++ b/lecturas.html
@@ -90,7 +90,14 @@
 			
 			<p>
 <br> La seguridad informática es la encargada de diseñar las normas, procedimientos y técnicas, para asegurar la integridad, disponibilidad y privacidad de la información en un sistema informático e intentar reducir las amenazas que se pueden encontrar. 
-Encontramos dos tipos de seguridad: La seguridad lógica que se enfoca en la protección de los contenidos y su información y la seguridad física aplicada a los equipos. <br>
+Encontramos dos tipos de seguridad: <br>
+<br>SEGURIDAD LÓGICA<br>
+<br>Se encarga de asegurar la parte software  de un  sistema informático  que se compone de  todo lo que no es físico es decir programas y los datos la seguridad lógica se encarga de controlar el acceso al sistema informático  desde el punto de vista  del software 
+se realice correctamente y  por  usuarios autorizados los cuales tiene un usuario y contraseña y desde afuera del sistema informático desde una red externa usando VPN <br>
+<br>SEGURIDAD FÍSICA<br>
+<br>Se encarga de asegurara toda la infraestructura tecnológica que brinda soporte a la información durante su uso, tránsito y almacenamiento. Se compone de cualquier equipo en el cual se almacene, procese o transmita la información de la empresa o de la persona.<br>
+Ejemplos: las computadoras, los servidores, los equipos portátiles, los medios de almacenamiento los equipos de conectividad, enrutadores, switchs y cualquier otro elemento de una red de computadoras por donde transita la información.
+				
 <br> En la actualidad la seguridad de la información es de suma importancia para las empresas y para las personas  ya que con los avances tecnológicos han permitido el crecimiento de las vulnerabilidades de virus, hackers entre otros y con la implementación 
 de un sistema de seguridad permitirá minimizar las vulnerabilidades de los sistemas y de la información contenida en ellos, así como de las redes privadas y sus recursos. <br>
 
