--- a/Principios y estandares.html
+++ b/Principios y estandares.html
@@ -29,7 +29,7 @@ n<!DOCTYPE html>
                 <ul>
                     <li><a href="Principios y estandares.html" class="menu">Principios y estandares</a></li>
                     <li><a href="Normas.html" class="menu">Normas</a></li>
-                    <li><a href="lectura 3.html" class="menu">Lectura 3</a></li>
+                    <li><a href="Amenazas-Vulnerabilidades.html" class="menu">Amenazas-Vulnerabilidades</a></li>
                 </ul>
                 </li>
 
