--- a/multimedia.html
+++ b/multimedia.html
@@ -73,7 +73,7 @@
 	</nav>
 	<div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a>				
 	</div>
-	<section2>
+	<section>
 		<h2>CONTENIDO MULTIMEDIA DEL CURSO SEGURIDAD INFORMÁTICA</h2>
 		<div><br>Audio Estandares de Seguridad Informática</br></div> 
 		<audio id="sonido" src="audio/Estandares_SG.mp3" controls>
@@ -84,7 +84,7 @@
 		<div><br>Video Seguridad Informática 2</br></div>
 		<div><iframe width="720" height="480" src="https://www.youtube.com/embed/015X7BgAYdo" frameborder="0" allowfullscreen></iframe>
 		</div>
-	</section2>
+	</section>
 	<Footer>
           <div id="apDiv25">Para uso de la Universidad Nacional Abierta y a Distancia UNAD</div>
           <div id="apDiv26">Elaborado por el grupo 301122_2, estudiantes del curso de diseño web </div>
