--- a/multimedia.html
+++ b/multimedia.html
@@ -73,18 +73,34 @@
 	</nav>
 	<div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a>				
 	</div>
-	<section2>
+	<section>
 		<h2>CONTENIDO MULTIMEDIA DEL CURSO SEGURIDAD INFORMÁTICA</h2>
 		<div><br>Audio Estandares de Seguridad Informática</br></div> 
 		<audio id="sonido" src="audio/Estandares_SG.mp3" controls>
 		</audio>
 		<div><br>Video Seguridad Informática 1</br></div>
-		<div><iframe width="720" height="480" src="https://www.youtube.com/embed/70W35yo7Bgw" frameborder="0" allowfullscreen></iframe>
+		<div><iframe width="700" height="460" src="https://www.youtube.com/embed/70W35yo7Bgw" frameborder="0" allowfullscreen></iframe>
 		</div>
 		<div><br>Video Seguridad Informática 2</br></div>
-		<div><iframe width="720" height="480" src="https://www.youtube.com/embed/015X7BgAYdo" frameborder="0" allowfullscreen></iframe>
+		<div><iframe width="700" height="460" src="https://www.youtube.com/embed/015X7BgAYdo" frameborder="0" allowfullscreen></iframe>
 		</div>
-	</section2>
+	</section>
+	<aside> 
+                <div id="apDiv5">
+                <div id="apDiv11">Nuestra UNAD</div>
+                </div>
+                <div id="apDiv6"><span style="text-align: justify;">
+                <iframe src='js/slider.html' width='260' height='180' frameborder='0'></iframe>    
+                </span>
+      			</div>
+              	<div id="apDiv7">
+                <div id="apDiv12">Ubicación Sede Nacional</div>
+      			</div>
+      			<div id="apDiv8"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15908.191419159031!2d-74.0975768!3d4.5854329!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc1c38a35fe03bf87!2sUNAD+UNIVERSIDAD+NACIONAL+ABIERTA+Sede+Jos%C3%A9+Celestino+Mutis!5e0!3m2!1ses!2sco!4v1475599261440" width="260" height="180" frameborder="0" style="border:0" allowfullscreen></iframe></div>
+              <div id="apDiv15"></div>
+              <div id="apDiv16">Nuestra ECBTI</div>
+      <div id="apDiv18"><iframe width="260" height="180" src="https://www.youtube.com/embed/Z-rfSPH3ZQA" frameborder="0" allowfullscreen></iframe></div>
+    	</aside>
 	<Footer>
           <div id="apDiv25">Para uso de la Universidad Nacional Abierta y a Distancia UNAD</div>
           <div id="apDiv26">Elaborado por el grupo 301122_2, estudiantes del curso de diseño web </div>
