--- a/sub2actividades.html
+++ b/sub2actividades.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" class"no-js">
+<html lang="es" class="no-js">
     <!-- comentario  -->
     <head>
  		<meta charset="UTF-8">
