Anexo de referencias bibliograficas

--- a/Normas.html
+++ b/Normas.html
@@ -100,6 +100,19 @@ d<!DOCTYPE html>
 			<figure>
                         <img src="img/imagen 3.jpg" alt="Seguridad" stile=float:left>
                   	</figure>
+			<br>
+			
+                    <p>
+                        <dt><b>Referencias bibliograficas</b></dt>
+                   </p>
+			
+			<p>
+<br> 
+•	Amenazas y vulnerabilidades en la informática, recuperado el 23 de octubre del 2016 de http://es.slideshare.net/carolcols/amenazas-y-vulnerabilidades-en-la-informtica.<br>
+•	Seguridad informática, recuperado el 23 de octubre del 2016 de  https://seguridadinformaticasmr.wikispaces.com/TEMA+1+SEGURIDAD+IFORM%C3%81TICA<br>
+•	Politicas y normas de seguridad informatica, recuperado el 23 de octubre del 2016 de  http://www.cvs.gov.co/jupgrade/images/stories/docs/Alertas/Politicas_de_Seguridad_Informatica_CVS_2011-.pdf<br>
+
+                    </p>
       			</article>
     </section>
     <aside> 
